kubernetes/catalog/it-tools/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: it-tools
  namespace: iwt01-it-tools
  labels:
    app.kubernetes.io/name: it-tools
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`iwt01-it-tools.int.rlservers.com`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: it-tools
          port: 80
  tls:
    secretName: int-rlservers-com-tls
